# otter-centaur

./: .gitignore  CLAUDE.md  LICENSE  README.md  otter.py  pyproject.toml
otter/: __init__.py  __main__.py  causal_calculus.py  conditional_proof.py  visualization.py
otter/core/: __init__.py  bridge.py  engine.py  proof.py  state.py  unification.py
otter/domains/: __init__.py  bridge_demo.py  causal_encoding.py  edges.py  goedel.py  interactive.py  lattice.py  little_alchemy.py  llm.py  peano.py  resolution.py
otter/inference/: __init__.py  paramodulate.py  resolve.py
tests/: test_causal_encoding.py  test_conditional_proof.py  test_convergent_proof.py  test_self_referential.py  test_zeta.py
tests/core/: test_bridge.py  test_engine.py  test_unification.py
tests/domains/: test_convergence.py  test_goedel.py  test_lattice.py  test_peano.py
tests/inference/: test_resolve.py
