[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "otter-centaur"
version = "0.2.0"
description = "Combinatorial search engine inspired by the Otter theorem prover"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[project.optional-dependencies]
llm = ["anthropic"]
test = ["pytest", "hypothesis"]

[project.scripts]
otter = "otter.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["otter*"]
